--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -40,7 +40,7 @@ Description: One-page portfolio website about me.
     <!-- About Section -->
     <section id="about">
       <h2>About Me</h2>
-      <img src="file:///Users/vanshnegi/profile.jpg" alt="Profile Picture of Vansh Negi" width="200" height="200">
+      <img src="/profile.jpeg" alt="Profile Picture of Vansh Negi" width="200" height="300">
       <p>I am currently pursuing BTech in Computer Science with a specialization in AI & ML in KR Mangalam University. I love building projects, learning new technologies, and exploring innovative solutions in software development.</p>
     </section>
 
